# CT

./: .gitignore  README.md  environment.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: cone_beam_360.py  cone_beam_single_angle.py  generate_phantom.py  line_integral_overhead.py  run_forward_demo.py  siddon_scaling_experiment.py
src/cbct_siddon/: __init__.py  geometry.py  phantom.py  project.py  siddon.py
tests/: _bruteforce.py  conftest.py  test_conebeam.py  test_geometry.py  test_phantom.py  test_siddon.py
