[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cbct-siddon"
version = "0.1.0"
description = "3D Shepp-Logan phantom, Siddon ray tracing, cone-beam forward projection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1.0", "ipython>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
